Corrected image contrast and brightness for clarity

--- a/less/filters.less
+++ b/less/filters.less
@@ -16,11 +16,11 @@ body > *:not(.notify),
     }
 
     .a11y-increase-contrast & {
-      filter: contrast(110%) brightness(110%);
+      filter: contrast(108%) brightness(98%);
     }
 
     .a11y-increase-contrast.a11y-inverted & {
-      filter: invert(100%) contrast(110%) brightness(110%);
+      filter: invert(100%) contrast(108%) brightness(98%);
     }
 
     [data-color-profile=achromatopsia] & {
@@ -28,7 +28,7 @@ body > *:not(.notify),
     }
 
     .a11y-increase-contrast[data-color-profile=achromatopsia] & {
-      filter: grayscale(100%) contrast(110%) brightness(110%);
+      filter: grayscale(100%) contrast(108%) brightness(98%);
     }
 
     .a11y-inverted[data-color-profile=achromatopsia]D & {
@@ -36,7 +36,7 @@ body > *:not(.notify),
     }
 
     .a11y-increase-contrast.a11y-inverted[data-color-profile=achromatopsia] & {
-      filter: invert(100%) grayscale(100%) contrast(110%) brightness(110%);
+      filter: invert(100%) grayscale(100%) contrast(108%) brightness(98%);
     }
 
     [data-color-profile=protanopia] & {
@@ -44,7 +44,7 @@ body > *:not(.notify),
     }
 
     .a11y-increase-contrast[data-color-profile=protanopia] & {
-      filter: url(assets/visua11y-filters.svg#protanopia) contrast(110%) brightness(110%);
+      filter: url(assets/visua11y-filters.svg#protanopia) contrast(108%) brightness(98%);
     }
 
     .a11y-inverted[data-color-profile=protanopia] & {
@@ -52,7 +52,7 @@ body > *:not(.notify),
     }
 
     .a11y-increase-contrast.a11y-inverted[data-color-profile=protanopia] & {
-      filter: invert(100%) url(assets/visua11y-filters.svg#protanopia) contrast(110%) brightness(110%);
+      filter: invert(100%) url(assets/visua11y-filters.svg#protanopia) contrast(108%) brightness(98%);
     }
 
     [data-color-profile=deuteranopia] & {
@@ -60,7 +60,7 @@ body > *:not(.notify),
     }
 
     .a11y-increase-contrast[data-color-profile=deuteranopia] & {
-      filter: url(assets/visua11y-filters.svg#deuteranopia) contrast(110%) brightness(110%);
+      filter: url(assets/visua11y-filters.svg#deuteranopia) contrast(108%) brightness(98%);
     }
 
     .a11y-inverted[data-color-profile=deuteranopia] & {
@@ -68,7 +68,7 @@ body > *:not(.notify),
     }
 
     .a11y-increase-contrast.a11y-inverted[data-color-profile=deuteranopia] & {
-      filter: invert(100%) url(assets/visua11y-filters.svg#deuteranopia) contrast(110%) brightness(110%);
+      filter: invert(100%) url(assets/visua11y-filters.svg#deuteranopia) contrast(108%) brightness(98%);
     }
 
     [data-color-profile=tritanopia] & {
@@ -76,7 +76,7 @@ body > *:not(.notify),
     }
 
     .a11y-increase-contrast[data-color-profile=tritanopia] & {
-      filter: url(assets/visua11y-filters.svg#tritanopia) contrast(110%) brightness(110%);
+      filter: url(assets/visua11y-filters.svg#tritanopia) contrast(108%) brightness(98%);
     }
 
     .a11y-inverted[data-color-profile=tritanopia] & {
@@ -84,7 +84,7 @@ body > *:not(.notify),
     }
 
     .a11y-increase-contrast.a11y-inverted[data-color-profile=tritanopia] & {
-      filter: invert(100%) url(assets/visua11y-filters.svg#tritanopia) contrast(110%) brightness(110%);
+      filter: invert(100%) url(assets/visua11y-filters.svg#tritanopia) contrast(108%) brightness(98%);
     }
 
     [data-color-profile=achromatopsia] & {
@@ -92,7 +92,7 @@ body > *:not(.notify),
     }
 
     .a11y-increase-contrast[data-color-profile=achromatopsia] & {
-      filter: url(assets/visua11y-filters.svg#achromatopsia) contrast(110%) brightness(110%);
+      filter: url(assets/visua11y-filters.svg#achromatopsia) contrast(108%) brightness(98%);
     }
 
     .a11y-inverted[data-color-profile=achromatopsia] & {
@@ -100,7 +100,7 @@ body > *:not(.notify),
     }
 
     .a11y-increase-contrast.a11y-inverted[data-color-profile=achromatopsia] & {
-      filter: invert(100%) url(assets/visua11y-filters.svg#achromatopsia) contrast(110%) brightness(110%);
+      filter: invert(100%) url(assets/visua11y-filters.svg#achromatopsia) contrast(108%) brightness(98%);
     }
 
     [data-color-profile=protanomaly] & {
@@ -108,7 +108,7 @@ body > *:not(.notify),
     }
 
     .a11y-increase-contrast[data-color-profile=protanomaly] & {
-      filter: url(assets/visua11y-filters.svg#protanomaly) contrast(110%) brightness(110%);
+      filter: url(assets/visua11y-filters.svg#protanomaly) contrast(108%) brightness(98%);
     }
 
     .a11y-inverted[data-color-profile=protanomaly] & {
@@ -116,7 +116,7 @@ body > *:not(.notify),
     }
 
     .a11y-increase-contrast.a11y-inverted[data-color-profile=protanomaly] & {
-      filter: invert(100%) url(assets/visua11y-filters.svg#protanomaly) contrast(110%) brightness(110%);
+      filter: invert(100%) url(assets/visua11y-filters.svg#protanomaly) contrast(108%) brightness(98%);
     }
 
     [data-color-profile=deuteranomaly] & {
@@ -124,7 +124,7 @@ body > *:not(.notify),
     }
 
     .a11y-increase-contrast[data-color-profile=deuteranomaly] & {
-      filter: url(assets/visua11y-filters.svg#deuteranomaly) contrast(110%) brightness(110%);
+      filter: url(assets/visua11y-filters.svg#deuteranomaly) contrast(108%) brightness(98%);
     }
 
     .a11y-inverted[data-color-profile=deuteranomaly] & {
@@ -132,7 +132,7 @@ body > *:not(.notify),
     }
 
     .a11y-increase-contrast.a11y-inverted[data-color-profile=deuteranomaly] & {
-      filter: invert(100%) url(assets/visua11y-filters.svg#deuteranomaly) contrast(110%) brightness(110%);
+      filter: invert(100%) url(assets/visua11y-filters.svg#deuteranomaly) contrast(108%) brightness(98%);
     }
 
     [data-color-profile=tritanomaly] & {
@@ -140,7 +140,7 @@ body > *:not(.notify),
     }
 
     .a11y-increase-contrast[data-color-profile=tritanomaly] & {
-      filter: url(assets/visua11y-filters.svg#tritanomaly) contrast(110%) brightness(110%);
+      filter: url(assets/visua11y-filters.svg#tritanomaly) contrast(108%) brightness(98%);
     }
 
     .a11y-inverted[data-color-profile=tritanomaly] & {
@@ -148,7 +148,7 @@ body > *:not(.notify),
     }
 
     .a11y-increase-contrast.a11y-inverted[data-color-profile=tritanomaly] & {
-      filter: invert(100%) url(assets/visua11y-filters.svg#tritanomaly) contrast(110%) brightness(110%);
+      filter: invert(100%) url(assets/visua11y-filters.svg#tritanomaly) contrast(108%) brightness(98%);
     }
 
     [data-color-profile=achromatomaly] & {
@@ -156,7 +156,7 @@ body > *:not(.notify),
     }
 
     .a11y-increase-contrast[data-color-profile=achromatomaly] & {
-      filter: url(assets/visua11y-filters.svg#achromatomaly) contrast(110%) brightness(110%);
+      filter: url(assets/visua11y-filters.svg#achromatomaly) contrast(108%) brightness(98%);
     }
 
     .a11y-inverted[data-color-profile=achromatomaly] & {
@@ -164,7 +164,7 @@ body > *:not(.notify),
     }
 
     .a11y-increase-contrast.a11y-inverted[data-color-profile=achromatomaly] & {
-      filter: invert(100%) url(assets/visua11y-filters.svg#achromatomaly) contrast(110%) brightness(110%);
+      filter: invert(100%) url(assets/visua11y-filters.svg#achromatomaly) contrast(108%) brightness(98%);
     }
 
   }
